@@ -13,6 +13,7 @@ Unreleased Version 2.3.0-pre
  * Feature: Add a macOS-specific setting in the user interface preferences to close Drawpile when the last window is closed.
  * Fix: Make clicking with touchpad not trigger touch color picker.
  * Fix: Properly enable or disable session permission boxes and sliders according to compatibility mode and operator status.
+ * Fix: Make key frame visibility attributes work properly in compatibility mode.
 
 2025-08-14 Version 2.3.0-beta.3
  * Fix: Allow putting labels on a blank brush thumbnail. Thanks hipofiz for reporting.
